# py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESEARCH.md  pyproject.toml
examples/: list_tasks.py
src/brainfile/: __init__.py  _keys.py  _time.py  _yaml.py  board_validation.py  contract_ops.py  discovery.py  files.py  formatters.py  frontmatter.py  id_gen.py  inference.py  ledger.py  linter.py  models.py  operations.py  parser.py  query.py  realtime.py  schema_hints.py  serializer.py  task_file.py  task_operations.py  templates.py  types_ledger.py  validator.py  workspace.py
tests/: __init__.py  conftest.py  test_board_config.py  test_board_validation.py  test_contract_ops.py  test_discovery.py  test_formatters.py  test_id_gen.py  test_inference.py  test_ledger.py  test_linter.py  test_models.py  test_operations.py  test_parser.py  test_query.py  test_realtime.py  test_schema_hints.py  test_serializer.py  test_task_operations.py  test_templates.py  test_validator.py  test_workspace.py
tests/fixtures/: __init__.py  boards.py
